--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
+    "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
