--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-awesome-reveal": "^4.2.8",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-image-gallery": "^1.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
