--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-awesome-reveal": "^4.2.8",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
