--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-icons": "^5.0.1",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
