--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "cSpell.words": [
+        "Atiyyah",
+        "foodi",
+        "foodigif",
+        "Friender",
+        "Heroku",
+        "Learnfinity",
+        "Royz",
         "Sami"
     ]
 }
